# aws-account

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .yamllint.yaml  LICENSE  README.md  aws-account.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  lint-python.yml  semgrep.yml
.trunk/: trunk.yaml
aws_account/: cli.py
aws_account/test/: test_cli.py  test_moto.py
