[tool.poetry]
name = "aws-account"
version = "0.1.1"
authors = ["M. Rollwagen <rollwagen@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/rollwagen/aws-account"
description = "Print out AWS account and identity information to verify which account/organization is currently in use."

[tool.poetry.scripts]
aws-account = 'aws_account.cli:main'

[tool.poetry.dependencies]
python = ">=3.8"
click = "*"
boto3 = "*"
colorama = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
